--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:unit": "sfdx-lwc-jest",
     "test:unit:watch": "sfdx-lwc-jest --watch",
     "test:unit:debug": "sfdx-lwc-jest --debug",
-    "test:unit:coverage": "sfdx-lwc-jest --coverage",
+    "test:unit:coverage": "sfdx-lwc-jest --coverage"
   },
   "devDependencies": {
     "@salesforce/eslint-config-lwc": "^0.4.0",
