getting accounts from apex

--- a/force-app/main/default/staticresources/ReactComponent/manifest.json
+++ b/force-app/main/default/staticresources/ReactComponent/manifest.json
@@ -2,7 +2,7 @@
 	"landing-pages": [
 		{
 			"path": "index.html",
-			"apex-controller": "c.AccountService"
+			"apex-controller": "AccountService"
 		}
 	]
 }
