--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
 	"presets": [
 		"@babel/preset-env",
 		"@babel/preset-react"
+		// "@salesforce/babel-preset-design-system-react"
 	],
 	"plugins": [
 		"@babel/plugin-proposal-class-properties"
