upgrades to react 18 syntax with typescript

--- a/force-app/main/default/staticresources/ReactComponent/manifest.json
+++ b/force-app/main/default/staticresources/ReactComponent/manifest.json
@@ -4,5 +4,7 @@
 			"path": "index.html",
 			"apex-controller": "AccountService"
 		}
-	]
+	],
+	"content-security-policy-type": "lightning",
+	"content-security-policy": "default-src *;"
 }
