--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.16.7",
     "@salesforce/babel-preset-design-system-react": "^3.0.0",
     "@salesforce/eslint-config-lwc": "^0.4.0",
     "@salesforce/sfdx-lwc-jest": "^0.7.0",
+    "@types/react": "^18.0.8",
     "babel-loader": "^8.0.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.16.0",
